manejo del dom para insertar y eliminar elementos

--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
   <title>javascript practice </title>
 </head>
 <body>
-      <h1 id="title">DOM Crear he insertar elementos</h1>
+  <h1 id="title">DOM- DOM Traversing</h1>
+  <nav>
+    <ul id="parent">
+      <li>son-1</li>
+      <li>son-2</li>
+      <li>son-3</li>
+      <ul>
+        <li>grandson1</li>
+        <li>grandson2</li>
+        <li>grandson3</li>
+      </ul>
+    </ul>
+  </nav>
+      <!-- <h1 id="title">DOM Crear he insertar elementos</h1>
       <ul id="dayList"></ul>
-      <select  id="selectDays"></select>
-<script src="./js/dom2.js"></script> 
+      <select  id="selectDays"></select> -->
+      <script src="./js/insertarEleliminarElementos.js"></script>
+<!-- <script src="./js/recorrerdom.js"></script>  -->
 <!-- <script src="./js/eventos2.js"></script> -->
   <!-- <script src="./js/eventos.js"></script> -->
 </body>
